--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.2",
+    "highcharts": "^10.2.1",
+    "highcharts-react-official": "^3.1.0",
+    "moment": "^2.29.4",
     "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-minimal-pie-chart": "^8.3.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
