--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dotenv": "^16.0.2",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "npm": "^8.18.0",
+    "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.5.0",
@@ -24,6 +27,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-moment": "^1.1.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
